--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,7 +14,9 @@ docs:
 
 #- title: Software
 #  url: software.html
-    
+- title: Projects
+  url: project.html
+
 - title: Teaching
   url: teaching.html
   
